Add Player interface and validate user input

--- a/src/app/rsvp/rsvp.component.html
+++ b/src/app/rsvp/rsvp.component.html
@@ -1,5 +1,6 @@
 <h2>RSVP Service</h2>
-<input [(ngModel)]="player" placeholder="Player Name" />
+<input [(ngModel)]="name" placeholder="Player Name" />
+<input [(ngModel)]="email" placeholder="Player Email" />
 <select [(ngModel)]="status">
     <option value="Yes">Yes</option>
     <option value="No">No</option>
